# robotic_arm_ws

./: LICENSE  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  (+3 more)
logs/robotic_arm_description/: build.cmake.000.log.stderr
logs/robotic_arm_teleop/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr
model_and_circuit/: robotic_arm.f3d  robotic_arm.fzz
model_and_circuit/alternate arms/: robotic_manipulator1.f3d  robotic_manipulator2.f3d  robotic_manipulator3.f3d
src/robotic_arm_control/: CMakeLists.txt
src/robotic_arm_description/: CMakeLists.txt  package.xml
src/robotic_arm_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
src/robotic_arm_description/meshes/: base_link.stl  gripper_1.stl  gripper_base_1.stl  jaw1_1.stl  jaw2_1.stl  jaw_1.stl  jaw_base_1.stl  jaw_connector1_1.stl  jaw_connector2_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl  link5_1.stl  link6_1.stl
src/robotic_arm_description/urdf/: materials.xacro  robotic_arm.gazebo  robotic_arm.trans  robotic_arm.urdf  robotic_arm.xacro
src/robotic_arm_moveit_config/: .setup_assistant  package.xml
src/robotic_arm_teleop/: CMakeLists.txt
src/robotic_arm_teleop/include/robotic_arm_teleop/: robotic_teleop_arm_gripper_keyboard.h
src/robotic_arm_teleop/src/: robotic_teleop_arm_gripper_keyboard.cpp
(+59 files in other folders)
